# my-private-finances

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
api/: Makefile  alembic.ini  pyproject.toml  pytest.ini
api/alembic/: env.py
api/alembic/versions/: 246dcdcac806_add_csv_profile_table.py  2ba8a55950a5_normalize_sa_types.py  (+12 more)
api/finassist_api/: main.py
api/my_private_finances/: db.py  deps.py  logging_config.py  main.py
api/tests/: conftest.py  helpers.py  test_accounts.py  test_accounts_create.py  test_accounts_list.py  test_accounts_validation.py  test_annual_report.py  test_budget_model.py  test_budget_vs_actual.py  test_budget_vs_actual_direct.py  test_budgets_crud.py  test_budgets_direct.py  test_categories_create.py  test_categories_delete.py  test_categories_list.py  test_categories_update.py  test_categorization_apply.py  test_categorization_rules_crud.py  test_categorization_service.py  test_categorization_service_integration.py  test_category_cost_type.py  test_csv_import.py  test_csv_import_autocat.py  test_csv_import_bank_de.py  test_csv_import_trade_republic.py  test_csv_profiles_crud.py  test_data_management.py  test_export.py  test_fixed_vs_variable_report.py  test_import_endpoint.py  test_ml_routes.py  test_ml_service.py  test_pdf_import.py  test_recurring_detection.py  test_recurring_pattern_model.py  test_recurring_patterns_routes.py  test_reports_monthly.py  test_smoke.py  test_spending_trend.py  test_transaction_hash.py  (+8 more)
app/: Makefile  (+7 more)
(+216 files in other folders)
